--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.postgresql:postgresql:42.2.2'
     compile group: 'jstl', name: 'jstl', version: '1.2'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
 }
