--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,15 @@
          xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <!--
-        <servlet-mapping>
-            <servlet-name>default</servlet-name>
-            <url-pattern>*.css</url-pattern>
-        </servlet-mapping>
-        <servlet-mapping>
-            <servlet-name>default</servlet-name>
-            <url-pattern>/images/*</url-pattern>
-        </servlet-mapping>
-        -->
+
+    <!--Group-->
+    <servlet>
+        <servlet-name>GroupController</servlet-name>
+        <servlet-class>ru.innopolis.stc9.t1.controller.GroupController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GroupController</servlet-name>
+        <url-pattern>/groups</url-pattern>
+    </servlet-mapping>
 
 </web-app>
