--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,33 @@
         <url-pattern>/groups/edit</url-pattern>
     </servlet-mapping>
 
+    <!--Login-->
+    <servlet>
+        <servlet-name>LoginController</servlet-name>
+        <servlet-class>ru.innopolis.stc9.t1.controller.LoginController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginController</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <!--User-->
+    <servlet>
+        <servlet-name>UniversalDashboardController</servlet-name>
+        <servlet-class>ru.innopolis.stc9.t1.controller.UniversalDashboardController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UniversalDashboardController</servlet-name>
+        <url-pattern>/user/dashboard</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>user-filter</filter-name>
+        <filter-class>ru.innopolis.stc9.t1.controller.filter.UserFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>user-filter</filter-name>
+        <url-pattern>/user/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
