Convert our project to Spring Security project

--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,8 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.2.6.RELEASE'
 }
