--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/security-context.xml
+        </param-value>
+    </context-param>
+
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <!--
+        ***************************************************************************************************
+    -->
     <!--Group-->
+    <!--
     <servlet>
         <servlet-name>GroupController</servlet-name>
         <servlet-class>ru.innopolis.stc9.t1.controller.GroupController</servlet-class>
@@ -23,7 +57,6 @@
         <url-pattern>/groups/edit</url-pattern>
     </servlet-mapping>
 
-    <!--Login-->
     <servlet>
         <servlet-name>LoginController</servlet-name>
         <servlet-class>ru.innopolis.stc9.t1.controller.LoginController</servlet-class>
@@ -33,7 +66,6 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
-    <!--User-->
     <servlet>
         <servlet-name>UniversalDashboardController</servlet-name>
         <servlet-class>ru.innopolis.stc9.t1.controller.UniversalDashboardController</servlet-class>
@@ -51,5 +83,6 @@
         <filter-name>user-filter</filter-name>
         <url-pattern>/user/*</url-pattern>
     </filter-mapping>
+-->
 
 </web-app>
