--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ repositories {
 dependencies {
     compile 'log4j:log4j:1.2.17'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
-//    compile 'org.postgresql:postgresql:42.2.2'
     compile group: 'jstl', name: 'jstl', version: '1.2'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     testCompile 'junit:junit:4.12'
@@ -24,4 +23,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.2.6.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '4.2.6.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.2.6.RELEASE'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.12.Final'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.12.RELEASE'
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.12.RELEASE'
 }
